chore: remove code smells